--- a/app/res/layout/activity_result.xml
+++ b/app/res/layout/activity_result.xml
@@ -3,7 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shareburst.MainActivity"
-    tools:ignore="MergeRootFrame">
-
-</FrameLayout>
+    tools:context="com.example.shareburst.ResultActivity"
+    tools:ignore="MergeRootFrame" />
