--- a/app/res/layout/fragment_result.xml
+++ b/app/res/layout/fragment_result.xml
@@ -6,23 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.shareburst.MainActivity$PlaceholderFragment" >
-    
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" >
+    tools:context="com.example.shareburst.ResultActivity$PlaceholderFragment" >
 
-        <requestFocus />
-    </EditText>
-
-    <Button
-        android:id="@+id/button1"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editText1"
-        android:onClick="verifyEmail"
-        android:text="Button" />
+        android:text="@string/hello_world" />
 
 </RelativeLayout>
