--- a/app/res/layout/activity_login.xml
+++ b/app/res/layout/activity_login.xml
@@ -1,13 +1,16 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.example.shareburst.LoginActivity" >
-
+    
     <!-- Login form -->
 
     <ScrollView
         android:id="@+id/login_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true" >
 
         <LinearLayout
             style="@style/LoginFormContainer"
@@ -72,5 +75,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-</merge>
+    
+</RelativeLayout>
