--- a/app/res/menu/groups.xml
+++ b/app/res/menu/groups.xml
@@ -3,6 +3,19 @@
     tools:context="com.example.shareburst.GroupsActivity" >
 
     <item
+        android:id="@+id/action_new"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_new"
+        android:title="@string/action_new"/>
+    
+    <item
+        android:id="@+id/action_edit_account"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_edit_account"/>
+    
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
