--- a/app/res/drawable-xhdpi/rectangle_red.xml
+++ b/app/res/drawable-xhdpi/rectangle_red.xml
@@ -2,6 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#ff0000" />
+    <size 
+        android:width="60dp"
+        android:height="40dp" />
     <padding android:left="7dp"
         android:top="12dp"
         android:right="50dp"
