--- a/app/res/menu/groups.xml
+++ b/app/res/menu/groups.xml
@@ -10,15 +10,22 @@
         android:title="@string/action_new"/>
     
     <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_refresh"
+        android:title="@string/action_refresh"/>
+    
+    <item
         android:id="@+id/action_edit_account"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_edit_account"/>
     
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_logout"/>
 
 </menu>
