--- a/app/res/menu/new_group.xml
+++ b/app/res/menu/new_group.xml
@@ -2,10 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.shareburst.NewGroupActivity" >
 
+    <item android:id="@+id/action_accept"
+          android:icon="@drawable/ic_action_accept"
+          android:title="@string/action_accept"
+          android:showAsAction="always" />
+    
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_edit_account"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_edit_account"/>
+    
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_logout"/>
 
 </menu>
