--- a/app/res/values/strings_activity_login.xml
+++ b/app/res/values/strings_activity_login.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <string name="shareburst">Mgluglublug</string>
+    <string name="shareburst">Best of Burst Worlds</string>
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in_short">Sign in</string>
