--- a/app/res/values/strings_activity_new_group.xml
+++ b/app/res/values/strings_activity_new_group.xml
@@ -2,6 +2,6 @@
     <string name="title_activity_new_group">New Group</string>
     <string name="users">Users</string>
     <string name="groupName">Group Name</string>
-    <string name="numPackets">Starburst Packets:</string>
+    <string name="numPackets">packets</string>
     <string name="addUser">Add User</string>
 </resources>
