--- a/app/res/menu/group.xml
+++ b/app/res/menu/group.xml
@@ -3,9 +3,22 @@
     tools:context="com.example.shareburst.GroupActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_edit"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_edit"
+        android:title="@string/action_edit"/>
+    
+    <item
+        android:id="@+id/action_edit_account"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_edit_account"/>
+    
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_logout"/>
 
 </menu>
