Fixed issue where starburst facts and groups list would overlap.

--- a/app/res/layout/fragment_groups.xml
+++ b/app/res/layout/fragment_groups.xml
@@ -3,40 +3,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.shareburst.GroupsActivity$PlaceholderFragment" >
-
-    <ListView
-        android:id="@+id/groupsList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" >
-    </ListView>
     
     <RelativeLayout
         android:id="@+id/footer"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true" 
-        android:layout_margin="20dp">
-    <TextView
-        android:id="@+id/starburstFactTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/starburstFact"
-        android:text="@string/starburst_fact"
-        android:textSize="20sp"
-        android:textStyle="bold|italic" />
-         
-     <TextView
-	     android:id="@id/starburstFact"
-	     android:layout_width="wrap_content"
-	     android:layout_height="wrap_content"
-	     android:layout_alignParentBottom="true"
-	     android:text="@string/default_fact"
-	     android:textSize="18sp"
-	     android:layout_margin="5dp" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp">
+        
+	    <TextView
+	        android:id="@+id/starburstFactTitle"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_above="@+id/starburstFact"
+	        android:text="@string/starburst_fact"
+	        android:textSize="20sp"
+	        android:textStyle="bold|italic" />
+	         
+	     <TextView
+		     android:id="@id/starburstFact"
+		     android:layout_width="wrap_content"
+		     android:layout_height="wrap_content"
+		     android:layout_alignParentBottom="true"
+		     android:text="@string/default_fact"
+		     android:textSize="18sp"
+		     android:layout_margin="5dp" />
      
      </RelativeLayout>
+    
+     <RelativeLayout
+        android:id="@+id/content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@id/footer"
+        android:gravity="center" >
+    
+	    <ListView
+	        android:id="@+id/groupsList"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent">
+	    </ListView>
+	    
+    </RelativeLayout>
 
 </RelativeLayout>
