--- a/app/res/layout/fragment_users.xml
+++ b/app/res/layout/fragment_users.xml
@@ -3,13 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.shareburst.UsersActivity$PlaceholderFragment" >
+    
+	<EditText android:id="@+id/inputSearch"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search users..."
+        android:inputType="textVisiblePassword"
+        android:layout_margin="10dp"/>
 
     <ListView
         android:id="@+id/usersList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_height="wrap_content"
+        android:layout_below="@id/inputSearch">
     </ListView>
 
 </RelativeLayout>
