--- a/app/res/layout/fragment_group.xml
+++ b/app/res/layout/fragment_group.xml
@@ -13,4 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:textSize="35sp"
+        android:text="" />
+
 </RelativeLayout>
