--- a/app/res/layout/fragment_group.xml
+++ b/app/res/layout/fragment_group.xml
@@ -22,6 +22,7 @@
         android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif-light"
         android:textSize="35sp"
+        android:singleLine="true"
         android:text="" />
 
 </RelativeLayout>
