--- a/app/res/menu/group.xml
+++ b/app/res/menu/group.xml
@@ -4,20 +4,22 @@
 
     <item
         android:id="@+id/action_edit"
-        android:orderInCategory="100"
         android:showAsAction="always"
         android:icon="@drawable/ic_action_edit"
         android:title="@string/action_edit"/>
     
+    <item android:id="@+id/action_discard"
+          android:icon="@drawable/ic_action_discard"
+          android:title="@string/action_discard"
+          android:showAsAction="always" />
+    
     <item
         android:id="@+id/action_edit_account"
-        android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_edit_account"/>
     
     <item
         android:id="@+id/action_logout"
-        android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_logout"/>
 
