--- a/app/res/menu/group.xml
+++ b/app/res/menu/group.xml
@@ -14,9 +14,9 @@
           android:showAsAction="always" />
     
     <item
-        android:id="@+id/action_edit_account"
+        android:id="@+id/action_set_preferences"
         android:showAsAction="never"
-        android:title="@string/action_edit_account"/>
+        android:title="@string/action_set_preferences"/>
     
     <item
         android:id="@+id/action_logout"
