--- a/app/res/menu/groups.xml
+++ b/app/res/menu/groups.xml
@@ -17,10 +17,9 @@
         android:title="@string/action_refresh"/>
     
     <item
-        android:id="@+id/action_edit_account"
-        android:orderInCategory="100"
+        android:id="@+id/action_set_preferences"
         android:showAsAction="never"
-        android:title="@string/action_edit_account"/>
+        android:title="@string/action_set_preferences"/>
     
     <item
         android:id="@+id/action_logout"
