--- a/app/res/menu/new_group.xml
+++ b/app/res/menu/new_group.xml
@@ -8,10 +8,9 @@
           android:showAsAction="always" />
     
     <item
-        android:id="@+id/action_edit_account"
-        android:orderInCategory="100"
+        android:id="@+id/action_set_preferences"
         android:showAsAction="never"
-        android:title="@string/action_edit_account"/>
+        android:title="@string/action_set_preferences"/>
     
     <item
         android:id="@+id/action_logout"
