--- a/app/res/menu/preferences.xml
+++ b/app/res/menu/preferences.xml
@@ -11,5 +11,10 @@
           android:icon="@drawable/ic_action_discard"
           android:title="@string/action_discard"
           android:showAsAction="always" />
+    
+    <item
+        android:id="@+id/action_logout"
+        android:showAsAction="never"
+        android:title="@string/action_logout"/>
 
 </menu>
