--- a/app/res/layout/activity_groups.xml
+++ b/app/res/layout/activity_groups.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shareburst.GroupsActivity"
+    tools:context="com.shareburst.group.GroupsActivity"
     tools:ignore="MergeRootFrame" />
