--- a/app/res/layout/activity_main.xml
+++ b/app/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shareburst.MainActivity"
+    tools:context="com.shareburst.main.MainActivity"
     tools:ignore="MergeRootFrame">
 
 </FrameLayout>
