--- a/app/res/layout/activity_new_group.xml
+++ b/app/res/layout/activity_new_group.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shareburst.NewGroupActivity"
+    tools:context="com.shareburst.group.NewGroupActivity"
     tools:ignore="MergeRootFrame" />
