--- a/app/res/layout/activity_register.xml
+++ b/app/res/layout/activity_register.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shareburst.RegisterActivity"
+    tools:context="com.shareburst.main.RegisterActivity"
     tools:ignore="MergeRootFrame" />
