--- a/app/res/layout/activity_users.xml
+++ b/app/res/layout/activity_users.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shareburst.UsersActivity"
+    tools:context="com.shareburst.user.UsersActivity"
     tools:ignore="MergeRootFrame" />
