--- a/app/res/layout/fragment_main2.xml
+++ b/app/res/layout/fragment_main2.xml
@@ -15,6 +15,7 @@
         android:layout_margin="100dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/logo" />
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
